--- a/amplify.yml
+++ b/amplify.yml
@@ -16,6 +16,7 @@ frontend:
         - echo "🏗️ Building Memora frontend..."
         - echo "Current directory:" $(pwd)
         - echo "Files:" $(ls -la)
+        - node scripts/production-build.js
         - echo "✅ Build completed - static files ready"
     postBuild:
       commands:
